Combine code blocks

--- a/1SA Final Project pt.2.ipynb
+++ b/1SA Final Project pt.2.ipynb
@@ -329,58 +329,16 @@
    "outputs": [],
    "source": [
     "# use groupby for title\n",
-    "cast_years = cast.groupby(by=\"title\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "cast_years = cast.groupby(by=\"title\")\n",
+    "\n",
     "# get group with the title \"Hamlet\"\n",
     "cast_years_hamlet = cast_years.get_group(\"Hamlet\")\n",
     "# drop duplicate years\n",
-    "cast_years_hamlet = cast_years_hamlet.drop_duplicates(\"year\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "1910    1\n1911    1\n1913    1\n1921    1\n1948    1\n1954    1\n1964    1\n1969    1\n1973    1\n1976    1\n1987    1\n1990    1\n1996    1\n2000    1\n2009    1\n2011    1\n2015    1\nName: year, dtype: int64"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "cast_years_hamlet = cast_years_hamlet.drop_duplicates(\"year\")\n",
+    "\n",
     "# sort values by year\n",
-    "cast_years_hamlet[\"year\"].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "cast_years_hamlet[\"year\"].value_counts().sort_index()\n",
+    "\n",
     "# find instances per decade\n",
     "hamlet_years_1910 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=1910) & (cast_years_hamlet[\"year\"]<=1919)])\n",
     "hamlet_years_1920 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=1920) & (cast_years_hamlet[\"year\"]<=1929)])\n",
@@ -392,19 +350,8 @@
     "hamlet_years_1980 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=1980) & (cast_years_hamlet[\"year\"]<=1989)])\n",
     "hamlet_years_1990 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=1990) & (cast_years_hamlet[\"year\"]<=1999)])\n",
     "hamlet_years_2000 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=2000) & (cast_years_hamlet[\"year\"]<=2009)])\n",
-    "hamlet_years_2010 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=2010) & (cast_years_hamlet[\"year\"]<=2019)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "hamlet_years_2010 = len(cast_years_hamlet[(cast_years_hamlet[\"year\"]>=2010) & (cast_years_hamlet[\"year\"]<=2019)])\n",
+    "\n",
     "# create a dictionary with instances per decade\n",
     "decades = {1910: hamlet_years_1910,\n",
     "           1920: hamlet_years_1920,\n",
@@ -416,19 +363,8 @@
     "           1980: hamlet_years_1980,\n",
     "           1990: hamlet_years_1990,\n",
     "           2000: hamlet_years_2000,\n",
-    "           2010: hamlet_years_2010}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "           2010: hamlet_years_2010}\n",
+    "\n",
     "# use dictionary to create a series\n",
     "decades_ser = pd.Series(decades)\n",
     "decades_ser\n",
@@ -439,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -470,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -509,37 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# instances of lead actors in the 1950's\n",
-    "actress_1950 = cast[(cast['year']>=1950) & (cast['year']<=1959) & (cast['n']==1) &\n",
-    "     (cast[\"type\"]==\"actress\")][\"year\"].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# instances of lead actresses in the 1950's\n",
-    "actor_1950 = cast[(cast['year']>=1950) & (cast['year']<=1959) & (cast['n']==1) &\n",
-    "     (cast[\"type\"]==\"actor\")][\"year\"].value_counts().sort_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -551,12 +457,20 @@
       "text/plain": "      actor  actress\n1950    604      271\n1951    633      272\n1952    591      284\n1953    634      290\n1954    626      298\n1955    606      264\n1956    614      288\n1957    708      284\n1958    694      275\n1959    678      287",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>actor</th>\n      <th>actress</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1950</th>\n      <td>604</td>\n      <td>271</td>\n    </tr>\n    <tr>\n      <th>1951</th>\n      <td>633</td>\n      <td>272</td>\n    </tr>\n    <tr>\n      <th>1952</th>\n      <td>591</td>\n      <td>284</td>\n    </tr>\n    <tr>\n      <th>1953</th>\n      <td>634</td>\n      <td>290</td>\n    </tr>\n    <tr>\n      <th>1954</th>\n      <td>626</td>\n      <td>298</td>\n    </tr>\n    <tr>\n      <th>1955</th>\n      <td>606</td>\n      <td>264</td>\n    </tr>\n    <tr>\n      <th>1956</th>\n      <td>614</td>\n      <td>288</td>\n    </tr>\n    <tr>\n      <th>1957</th>\n      <td>708</td>\n      <td>284</td>\n    </tr>\n    <tr>\n      <th>1958</th>\n      <td>694</td>\n      <td>275</td>\n    </tr>\n    <tr>\n      <th>1959</th>\n      <td>678</td>\n      <td>287</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# instances of lead actors in the 1950's\n",
+    "actress_1950 = cast[(cast['year']>=1950) & (cast['year']<=1959) & (cast['n']==1) &\n",
+    "     (cast[\"type\"]==\"actress\")][\"year\"].value_counts().sort_index()\n",
+    "\n",
+    "# instances of lead actresses in the 1950's\n",
+    "actor_1950 = cast[(cast['year']>=1950) & (cast['year']<=1959) & (cast['n']==1) &\n",
+    "     (cast[\"type\"]==\"actor\")][\"year\"].value_counts().sort_index()\n",
+    "\n",
     "# create a DataFrame with instances of actors and actresses in the 1950's\n",
     "pd.DataFrame(actor_1950.values, columns=[\"actor\"], index=actor_1950.index).join(\n",
     "    pd.DataFrame(actress_1950.values, columns=[\"actress\"], index=actress_1950.index))"
@@ -576,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -587,7 +501,7 @@
      "data": {
       "text/plain": "Charles Starrett     200\nMohanlal             184\nMammootty            177\nBuck Jones           130\nRajesh Khanna        127\nJohnny Mack Brown    124\nJohn Wayne           117\nAmitabh Bachchan     113\nBob Steele           110\nDharmendra           107\nName: name, dtype: int64"
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,18 +513,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
-      "text/plain": "Vilma Santos         71\nNora Aunor           69\nViola Dana           66\nBarbara Stanwyck     61\nBebe Daniels         59\nBetty Compson        59\nPauline Frederick    57\nAlice Brady          57\nMary Pickford        56\nJoan Crawford        55\nName: name, dtype: int64"
+      "text/plain": "Vilma Santos         71\nNora Aunor           69\nViola Dana           66\nBarbara Stanwyck     61\nBetty Compson        59\nBebe Daniels         59\nPauline Frederick    57\nAlice Brady          57\nMary Pickford        56\nJoan Crawford        55\nName: name, dtype: int64"
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +527,13 @@
    "source": [
     "# display top 10 actresses\n",
     "cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actress\")][\"name\"].value_counts().head(10)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
@@ -634,39 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# deep copy of Frank Oz instances in data\n",
-    "frank_oz = cast[cast[\"name\"]==\"Frank Oz\"].copy()\n",
-    "# sort values by year\n",
-    "frank_oz.sort_values(by=[\"year\"], inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# false marks all duplicates as true\n",
-    "frank_oz_dup = frank_oz[frank_oz.duplicated(\"title\", keep=False)].copy()\n",
-    "# keeps duplicates only\n",
-    "frank_oz_dup.drop_duplicates(\"title\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -678,19 +561,29 @@
       "text/plain": "                                         title      name\nyear                                                    \n1979                          The Muppet Movie  Frank Oz\n1981                    The Great Muppet Caper  Frank Oz\n1981            An American Werewolf in London  Frank Oz\n1982                          The Dark Crystal  Frank Oz\n1984                The Muppets Take Manhattan  Frank Oz\n1985  Sesame Street Presents: Follow that Bird  Frank Oz\n1992                The Muppet Christmas Carol  Frank Oz\n1996                    Muppet Treasure Island  Frank Oz\n1999      The Adventures of Elmo in Grouchland  Frank Oz\n1999                        Muppets from Space  Frank Oz",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>name</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1979</th>\n      <td>The Muppet Movie</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1981</th>\n      <td>The Great Muppet Caper</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1981</th>\n      <td>An American Werewolf in London</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1982</th>\n      <td>The Dark Crystal</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1984</th>\n      <td>The Muppets Take Manhattan</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1985</th>\n      <td>Sesame Street Presents: Follow that Bird</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1992</th>\n      <td>The Muppet Christmas Carol</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1996</th>\n      <td>Muppet Treasure Island</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>The Adventures of Elmo in Grouchland</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>Muppets from Space</td>\n      <td>Frank Oz</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 26,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# deep copy of Frank Oz instances in data\n",
+    "frank_oz = cast[cast[\"name\"]==\"Frank Oz\"].copy()\n",
+    "# sort values by year\n",
+    "frank_oz.sort_values(by=[\"year\"], inplace=True)\n",
+    "\n",
+    "# false marks all duplicates as true\n",
+    "frank_oz_dup = frank_oz[frank_oz.duplicated(\"title\", keep=False)].copy()\n",
+    "# keeps duplicates only\n",
+    "frank_oz_dup.drop_duplicates(\"title\", inplace=True)\n",
+    "\n",
     "# display duplicated movies\n",
     "frank_oz_dup.set_index(\"year\").drop(columns=[\"type\", \"character\", \"n\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "outputs": [],
    "source": [],
    "metadata": {
