Fix typo sec. 4

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2957,7 +2957,7 @@
    "source": [
     "# max features default is sqrt (number of features selected per split)\n",
     "# bootstrap default is true (resampling data true)\n",
-    "# n estimators default in 100 (number of decision tree classifiers)\n",
+    "# n estimators default is 100 (number of decision tree classifiers)\n",
     "rf_clf = RandomForestClassifier(random_state=42)"
    ],
    "metadata": {
