Fix markdown sec. 4

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1573,8 +1573,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> The chosen evaluation metric: RMSE\n",
-    "> The root-mean-square error is the standard deviation of the prediction error.\n",
+    "> The chosen evaluation metric:\n",
+    ">\n",
+    "> The root-mean-square error (RMSE) is the standard deviation of the prediction error.\n",
     "> It is the differences between the predicted and actual values, and shows how much they are\n",
     "> spread out."
    ],
