Fix typo sec. 4

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1962,7 +1962,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> The Random Forest Regression model performed better than the linear regression model,\n",
+    "> The Random Forest Regressor model performed better than the linear regression model,\n",
     "> even after cross validation. The next step is to find the hyperparameters\n",
     "> that provide the best results.\n",
     ">\n",
