Combine cells question 6

--- a/1SA Final Project pt.2.ipynb
+++ b/1SA Final Project pt.2.ipynb
@@ -61,16 +61,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "('Binary: 1010000', 'Octal: 120', 'Hex: 50')"
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# try function\n",
     "bases(80)"
@@ -498,42 +489,46 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": "Charles Starrett     200\nMohanlal             184\nMammootty            177\nBuck Jones           130\nRajesh Khanna        127\nJohnny Mack Brown    124\nJohn Wayne           117\nAmitabh Bachchan     113\nBob Steele           110\nDharmendra           107\nName: name, dtype: int64"
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 10 Actors:\n",
+      "Charles Starrett     200\n",
+      "Mohanlal             184\n",
+      "Mammootty            177\n",
+      "Buck Jones           130\n",
+      "Rajesh Khanna        127\n",
+      "Johnny Mack Brown    124\n",
+      "John Wayne           117\n",
+      "Amitabh Bachchan     113\n",
+      "Bob Steele           110\n",
+      "Dharmendra           107\n",
+      "Name: name, dtype: int64 \n",
+      "\n",
+      "Top 10 Actresses:\n",
+      "Vilma Santos         71\n",
+      "Nora Aunor           69\n",
+      "Viola Dana           66\n",
+      "Barbara Stanwyck     61\n",
+      "Betty Compson        59\n",
+      "Bebe Daniels         59\n",
+      "Pauline Frederick    57\n",
+      "Alice Brady          57\n",
+      "Mary Pickford        56\n",
+      "Joan Crawford        55\n",
+      "Name: name, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "# display top 10 actors\n",
-    "cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actor\")][\"name\"].value_counts().head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Vilma Santos         71\nNora Aunor           69\nViola Dana           66\nBarbara Stanwyck     61\nBetty Compson        59\nBebe Daniels         59\nPauline Frederick    57\nAlice Brady          57\nMary Pickford        56\nJoan Crawford        55\nName: name, dtype: int64"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "print(\"Top 10 Actors:\")\n",
+    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actor\")][\"name\"].value_counts().head(10), \"\\n\")\n",
+    "\n",
     "# display top 10 actresses\n",
-    "cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actress\")][\"name\"].value_counts().head(10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+    "print(\"Top 10 Actresses:\")\n",
+    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actress\")][\"name\"].value_counts().head(10))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -549,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -561,7 +556,7 @@
       "text/plain": "                                         title      name\nyear                                                    \n1979                          The Muppet Movie  Frank Oz\n1981                    The Great Muppet Caper  Frank Oz\n1981            An American Werewolf in London  Frank Oz\n1982                          The Dark Crystal  Frank Oz\n1984                The Muppets Take Manhattan  Frank Oz\n1985  Sesame Street Presents: Follow that Bird  Frank Oz\n1992                The Muppet Christmas Carol  Frank Oz\n1996                    Muppet Treasure Island  Frank Oz\n1999      The Adventures of Elmo in Grouchland  Frank Oz\n1999                        Muppets from Space  Frank Oz",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>name</th>\n    </tr>\n    <tr>\n      <th>year</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1979</th>\n      <td>The Muppet Movie</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1981</th>\n      <td>The Great Muppet Caper</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1981</th>\n      <td>An American Werewolf in London</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1982</th>\n      <td>The Dark Crystal</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1984</th>\n      <td>The Muppets Take Manhattan</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1985</th>\n      <td>Sesame Street Presents: Follow that Bird</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1992</th>\n      <td>The Muppet Christmas Carol</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1996</th>\n      <td>Muppet Treasure Island</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>The Adventures of Elmo in Grouchland</td>\n      <td>Frank Oz</td>\n    </tr>\n    <tr>\n      <th>1999</th>\n      <td>Muppets from Space</td>\n      <td>Frank Oz</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "outputs": [],
    "source": [],
    "metadata": {
