--- a/1SA Final Project pt.2.ipynb
+++ b/1SA Final Project pt.2.ipynb
@@ -61,7 +61,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "('Binary: 1010000', 'Octal: 120', 'Hex: 50')"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# try function\n",
     "bases(80)"
@@ -493,29 +502,29 @@
      "output_type": "stream",
      "text": [
       "Top 10 Actors:\n",
-      "Charles Starrett     200\n",
-      "Mohanlal             184\n",
-      "Mammootty            177\n",
-      "Buck Jones           130\n",
-      "Rajesh Khanna        127\n",
-      "Johnny Mack Brown    124\n",
-      "John Wayne           117\n",
-      "Amitabh Bachchan     113\n",
-      "Bob Steele           110\n",
-      "Dharmendra           107\n",
+      "Mohanlal              126\n",
+      "Mammootty             118\n",
+      "Akshay Kumar           87\n",
+      "Jayaram                76\n",
+      "Andy Lau               72\n",
+      "Ajay Devgn             69\n",
+      "Eric Roberts           68\n",
+      "Amitabh Bachchan       68\n",
+      "Nagarjuna Akkineni     60\n",
+      "Dilip                  59\n",
       "Name: name, dtype: int64 \n",
       "\n",
       "Top 10 Actresses:\n",
-      "Vilma Santos         71\n",
-      "Nora Aunor           69\n",
-      "Viola Dana           66\n",
-      "Barbara Stanwyck     61\n",
-      "Betty Compson        59\n",
-      "Bebe Daniels         59\n",
-      "Pauline Frederick    57\n",
-      "Alice Brady          57\n",
-      "Mary Pickford        56\n",
-      "Joan Crawford        55\n",
+      "Judy Ann Santos     36\n",
+      "Maricel Soriano     33\n",
+      "Isabelle Huppert    32\n",
+      "Sharon Cuneta       26\n",
+      "Maggie Cheung       24\n",
+      "Debbie Rochon       19\n",
+      "Michelle Yeoh       19\n",
+      "Sandra Bullock      19\n",
+      "Carmen Maura        18\n",
+      "Juliette Binoche    18\n",
       "Name: name, dtype: int64\n"
      ]
     }
@@ -523,11 +532,11 @@
    "source": [
     "# display top 10 actors\n",
     "print(\"Top 10 Actors:\")\n",
-    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actor\")][\"name\"].value_counts().head(10), \"\\n\")\n",
+    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actor\") & (cast[\"year\"]>=1990)][\"name\"].value_counts().head(10), \"\\n\")\n",
     "\n",
     "# display top 10 actresses\n",
     "print(\"Top 10 Actresses:\")\n",
-    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actress\")][\"name\"].value_counts().head(10))"
+    "print(cast[(cast[\"n\"]==1) & (cast[\"type\"]==\"actress\") & (cast[\"year\"]>=1990)][\"name\"].value_counts().head(10))"
    ]
   },
   {
