Tweak comments and markdowns sec. 4

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2632,7 +2632,13 @@
    "cell_type": "markdown",
    "source": [
     "> Accuracy is less relevant for an imbalanced classification problem.\n",
-    "> Evaluating by a metric that represents the data better is important."
+    "> Evaluating by a metric that represents the data better is important.\n",
+    ">\n",
+    "> Chosen evaluation metric:\n",
+    ">\n",
+    "> The F1 Score is calculated by using precision (the accuracy of the positive predictions) and\n",
+    "> recall (the ratio of positive instances correctly classified) accuracy.\n",
+    "> This metric gives a higher value towards false positives rather than false negatives."
    ],
    "metadata": {
     "collapsed": false
@@ -3394,7 +3400,7 @@
     "cat_features_2 = [\"hotel\", \"arrival_date_month\"]\n",
     "\n",
     "\n",
-    "# category pipleine without meal transformer\n",
+    "# category pipeline without meal transformer\n",
     "cat_pipeline_2 = Pipeline([\n",
     "    (\"imputer\", SimpleImputer(strategy=\"constant\", fill_value=\"Unknown\")),\n",
     "    (\"one_hot\", OneHotEncoder(handle_unknown=\"ignore\"))\n",
@@ -3828,6 +3834,8 @@
    ],
    "source": [
     "# evaluate scores for comparison\n",
+    "# can't assess using F1 score\n",
+    "# precision will divide by zero\n",
     "print(\"Accuracy:\", metrics.accuracy_score(y_train, never_canceled_pred))\n",
     "print(\"Confusion Matrix:\\n\", metrics.confusion_matrix(y_train, never_canceled_pred))"
    ],
