--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -4013,10 +4013,7 @@
     "> title=\"Article\">link</a>\n",
     "> 3. Average Daily Rate Article <a href=\"https://www.investopedia.com/terms/a/average-daily-rate.asp\"\n",
     "> title=\"Investopedia\">link</a>\n",
-    "> 4. MinMaxScaler and StandardScaler Explanation <a href=\"https://stackoverflow.com/questions/\n",
-    "> 51237635/difference-between-standard-scaler-and-minmaxscaler\" title=\"stackoverflow\">link</a>\n",
-    "> 5. Random Forest Article <a href=\"https://towardsdatascience.com/an-implementation-and-\n",
-    "> explanation-of-the-random-forest-in-python-77bf308a9b76\" title=\"towardsdatascience\">link</a>"
+    "> 4. Random Forest Article <a href=\"https://towardsdatascience.com/an-implementation-and-explanation-of-the-random-forest-in-python-77bf308a9b76\" title=\"towardsdatascience\">link</a>"
    ],
    "metadata": {
     "collapsed": false,
