Fix markdown indent

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1607,8 +1607,8 @@
    "cell_type": "markdown",
    "source": [
     "> ### Observations:\n",
-    "> * Most bookings are labeled as checked-out and not canceled when the ADR was zero.\n",
-    "> This concludes the previous speculation."
+    ">> * Most bookings are labeled as checked-out and not canceled when the ADR was zero.\n",
+    ">> This concludes the previous speculation."
    ],
    "metadata": {
     "collapsed": false,
