--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -513,14 +513,14 @@
    "cell_type": "markdown",
    "source": [
     "> ### Correlations with num_subscribers Attribute- Overview:\n",
-    "> The strongest positive correlations (0.1 or more) are:\n",
-    "> * num_reviews\n",
-    "> * num_lectures\n",
-    "> * content_duration\n",
-    ">\n",
-    "> The strongest negative correlations (-0.1 or less) are:\n",
-    "> * course_id\n",
-    "> * is_paid"
+    ">> The strongest positive correlations (0.1 or more) are:\n",
+    ">> * num_reviews\n",
+    ">> * num_lectures\n",
+    ">> * content_duration\n",
+    ">>\n",
+    ">> The strongest negative correlations (-0.1 or less) are:\n",
+    ">> * course_id\n",
+    ">> * is_paid"
    ],
    "metadata": {
     "collapsed": false
@@ -662,8 +662,8 @@
    "cell_type": "markdown",
    "source": [
     "> ### Overview:\n",
-    "> * The course ID is unique for each course.\n",
-    "> * This column should be removed when training a model in order to generalize better."
+    ">> * The course ID is unique for each course.\n",
+    ">> * This column should be removed when training a model in order to generalize better."
    ],
    "metadata": {
     "collapsed": false
