Fix markdown indent

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -605,15 +605,15 @@
    "cell_type": "markdown",
    "source": [
     "> ### Correlations with is_canceled Attribute - Overview:\n",
-    "> The strongest positive correlations (0.1 or more) are:\n",
-    "> * lead_time\n",
-    "> * previous_cancellations\n",
-    ">\n",
-    "> The strongest negative correlations (-0.1 or less) are:\n",
-    "> * total_of_special_requests\n",
-    "> * required_car_parking_spaces\n",
-    "> * booking_changes\n",
-    ">\n",
+    ">> The strongest positive correlations (0.1 or more) are:\n",
+    ">> * lead_time\n",
+    ">> * previous_cancellations\n",
+    ">>\n",
+    ">> The strongest negative correlations (-0.1 or less) are:\n",
+    ">> * total_of_special_requests\n",
+    ">> * required_car_parking_spaces\n",
+    ">> * booking_changes\n",
+    ">>\n",
     "> The attribute combinations tested (guests stayed and nights stayed) both had weak correlations."
    ],
    "metadata": {
