--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -1011,13 +1011,13 @@
    "cell_type": "markdown",
    "source": [
     "> ### Observations:\n",
-    "> * As speculated earlier in the initial observations, $20 is the most common price for a course.\n",
-    "> * The number of listings with the price $0 matches the number of instances that were\n",
-    "> labeled \"False\" in the is_paid column.\n",
-    "> * The prices listed tend to increase by 5 dollars until they reach the maximum price\n",
-    "> which is $200.\n",
-    "> * Amongst the 10 most common prices in the data, most are subscribed to the free courses.\n",
-    "> * Content duration is longer for paid courses."
+    ">> * As speculated earlier in the initial observations, $20 is the most common price for a course.\n",
+    ">> * The number of listings with the price $0 matches the number of instances that were\n",
+    ">> labeled \"False\" in the is_paid column.\n",
+    ">> * The prices listed tend to increase by 5 dollars until they reach the maximum price\n",
+    ">> which is $200.\n",
+    ">> * Amongst the 10 most common prices in the data, most are subscribed to the free courses.\n",
+    ">> * Content duration is longer for paid courses."
    ],
    "metadata": {
     "collapsed": false
@@ -1177,16 +1177,16 @@
    "cell_type": "markdown",
    "source": [
     "> ### Observations:\n",
-    "> * All Levels is the most common level, representing over 50%.\n",
-    "> * Web Development is the most common subject, and Business Finance is second with\n",
-    "> approximately a 1% differential.\n",
-    "> * Price variations according to the level of the course also show that Expert is\n",
-    "> the least common level in the data. It is also the only level that does not\n",
-    "> provide free courses. The other levels are dispersed more frequently\n",
-    "> throughout the line.\n",
-    "> * Web Development courses are significantly higher in subscribers than the other subjects.\n",
-    "> Since Business Finance falls shortly behind in content, it is likely that people are more\n",
-    "> interested in studying Web Development courses."
+    ">> * All Levels is the most common level, representing over 50%.\n",
+    ">> * Web Development is the most common subject, and Business Finance is second with\n",
+    ">> approximately a 1% differential.\n",
+    ">> * Price variations according to the level of the course also show that Expert is\n",
+    ">> the least common level in the data. It is also the only level that does not\n",
+    ">> provide free courses. The other levels are dispersed more frequently\n",
+    ">> throughout the line.\n",
+    ">> * Web Development courses are significantly higher in subscribers than the other subjects.\n",
+    ">> Since Business Finance falls shortly behind in content, it is likely that people are more\n",
+    ">> interested in studying Web Development courses."
    ],
    "metadata": {
     "collapsed": false
@@ -1369,10 +1369,10 @@
    "cell_type": "markdown",
    "source": [
     "> ### Observations:\n",
-    "> * The duplicated courses have different parameters such as is_paid or published_timestamp.\n",
-    "> Maybe the course provides the first lessons free of charge, or they added new content.\n",
-    "> * These instances can be kept as they are likely to have various values (i.e. each\n",
-    "> value in the num_subscribers column is unique)."
+    ">> * The duplicated courses have different parameters such as is_paid or published_timestamp.\n",
+    ">> Maybe the course provides the first lessons free of charge, or they added new content.\n",
+    ">> * These instances can be kept as they are likely to have various values (i.e. each\n",
+    ">> value in the num_subscribers column is unique)."
    ],
    "metadata": {
     "collapsed": false
