Change section 5 title

--- a/1SA ML Udemy Courses.ipynb
+++ b/1SA ML Udemy Courses.ipynb
@@ -2848,7 +2848,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# 5. Evaluate the Test Set"
+    "# 5. Evaluating the Test Set"
    ],
    "metadata": {
     "collapsed": false
